# AIM-Trading_dev

./: Cargo.toml  Flow.md  PORTFOLIO_ALLOCATION_GUIDE.md  Sprint.md  TEST_PORTFOLIO_ALLOCATION.md
aim_data/src/explorer/aim/: api.rs  mod.rs
src/: main.rs
src/monte_carlo/: barriers.rs  config.rs  core_sim.rs  mod copy.rs  mod.rs  plotting.rs  portfolio.rs
src/tasks/: mod.rs
src/tasks/monte_carlo/: mod.rs
ui/: app.slint  data_type.slint
ui/pages/dashboard/: dashboard.slint
ui/pages/monte_carlo/: monte_carlo_global.slint  monte_carlo_theme.slint  monte_carlo_types.slint  monte_carlo_window.slint
ui/pages/monte_carlo/components/: PortfolioAllocationTable.slint  PortfolioList.slint  PortfolioResultsPanel.slint  PortfolioStatsPanel.slint  TickerForm.slint  TickerStatsPanel.slint
ui/pages/quantitative/: quantitative_layout.slint
